# canduma

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Procfile  README.md  RustConfig  TEST.http  certificate.sh  diesel.toml  docker-compose.yml  package.json  stack.yml
certs/: rust.localhost.crt  rust.localhost.key  rust.localhost.pem
keys/: private_rsa_key.der  public_rsa_key.der  rs256-4096-private.rsa  rs256-4096-public.pem
migrations/2019-10-10-075152_create_members/: down.sql  up.sql
migrations/2019-11-04-030204_users/: down.sql  up.sql
src/: cli_args.rs  db.rs  error.rs  errors.rs  graphql_schema.rs  main.rs  schema.rs  utils.rs
src/database/: mod.rs  pool.rs
src/graphql/: handler.rs  manager.rs  mod.rs  model.rs  route.rs
src/handlers/: mod.rs
src/jwt/: handler.rs  manager.rs  mod.rs  model.rs
src/models/: user.rs
src/user/: handler.rs  manager.rs  mod.rs  model.rs  route.rs  util.rs
src/user/service/: list.rs  login.rs  mod.rs  register.rs
src/user/service/token/: decode.rs  generate.rs  mod.rs
src/utils/: jwt.rs  mod.rs
tests/: jest.afterall.js  jest.beforeall.js  jest.env.js  user.test.js
