[package]
name = "canduma"
version = "0.1.0"
authors = ["Julien Lenne <contact.lenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = {version = "1.0", features = ["ssl"]}
actix = "0.8.3"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
juniper = { git = "https://github.com/graphql-rust/juniper.git"}
futures = "0.1.29"
uuid = { version = "0.7", features = ["serde", "v4"] }
derive_more = "0.15.0"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
chrono = { version = "0.4.6", features = ["serde"] }
rand = "0.7.2"
argon2rs = "0.2.5"
actix-identity = "0.1.0"
lazy_static = "1.3.0"
jsonwebtoken = "6"
actix-web-httpauth = "0.3.2"